--- a/笔记.md
+++ b/笔记.md
@@ -1,4 +1,4 @@
-<b># 入门</b>
+# 入门
 
 ELK  ES分布式搜索引擎
 
@@ -7,6 +7,7 @@ ELK  ES分布式搜索引擎
 RESTFUL风格
 
 URI， 
+es: 笔记链接： https://blog.csdn.net/u011863024/article/details/115721328
 
 # linux 连接ssh
 
