--- a/笔记.md
+++ b/笔记.md
@@ -37,4 +37,8 @@ discovery.seed_hosts:  ["127.0.0.1", "[::1]"]
 ```go
 go env -w CGO_ENABLED=1
 ```
+# go test 相关
+go test -run TestA -v -args "11" "22"
+-v 显示详细信息
+-run 指定要运行的测试函数
 
